# gremlin

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.sh  gremlinperf.R  parallel16_bench.sh  parallel2_bench.sh  parallel4_bench.sh  parallel_bench.sh  runjob.sh
benches/: benchmark.rs  benchndarray.rs  chunked_8.rs  parallel.rs  parallel16.rs  parallel2.rs  parallel4.rs
src/: lib.rs  main.rs  test.rs
src/lib/: danger_math.rs  matrix_math.rs  mod.rs  utilities.rs
tests/: chunk_par.rs  parallel.rs  test.rs
